icons added to carousel

--- a/index.html
+++ b/index.html
@@ -290,12 +290,12 @@
                 </div>
 <div class="full_test">
 <div class="carousel"  data-flickity='{ "fade": true, "prevNextButtons": false }'>
-    <div class="carousel-cell"><!--<br> <h2><a href="#" >A multi billion dollar health care group</a></h2>-->
-                <p> " Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the buisness and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vison when recruting candidates. " <div class="one spacing"></div><span> - Group GM HR, Reputed multi-billion dollar Healthcare Group.</span> </p></div>
-    <div class="carousel-cell" ><!--<br><h2><a href="#">A massive family conglomerate</a></h2>-->
+    <div class="carousel-cell"><!--<br> <h2><a href="#" >A multi billion dollar health care group</a></h2>--><img src="images/svg/folder.png">
+                <p> " Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the buisness and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vison when recruting candidates. " <div class="one spacing"></div><span> - Group GM HR, Reputed multi-billion dollar Healthcare Group. </span> </p></div>
+    <div class="carousel-cell" ><!--<br><h2><a href="#">A massive family conglomerate</a></h2>--><img src="images/svg/business.png">
                 <p> " I find Abishek to be very engaging, dependable and high in integrity, he works with a wide network of well-qualified individuals across a range of job diciplines. What I value the most is that he always listens but never afraid to push back when he feels that someone is the right fir for our buisness. Having a partnership with Abishek and Peergrowth has significantly imoroved our time-to-hire on key roles over the past six months. He is very effictive at his job and its a pleasure to recommend him as a accomplished recruiting proffessional. " <div class="one spacing"></div><span> - CHRO, Diversified UAE based conglomerate.</span> </p></div>
-    <div class="carousel-cell" ><!--<br><h2><a href="#s">A reputed Avation group</a></h2>-->
-                <p> " Peergrowth has provided us with a tailored recruitment service through comprehensive unerstanding of our culture and service needs. This personalised approach goes a long wat in meeting our needs and successfully identified people for our organisation. " <div class="one spacing"></div><span> - CHRO, Global aviation firm. </span></p></div>
+    <div class="carousel-cell" ><!--<br><h2><a href="#s">A reputed Avation group</a></h2>--><img src="images/svg/plane.png">
+                <p> " Peergrowth has provided us with a tailored recruitment service through comprehensive unerstanding of our culture and service needs. This personalised approach goes a long wat in meeting our needs and successfully identified people for our organisation. " <div class="one spacing"></div><span> - CHRO, Global aviation firm.</span></p></div>
 </div>
 </div>
 
@@ -729,9 +729,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
@@ -786,7 +786,7 @@
                             <!-- <p><a href="#" class="button boxed black">Read more</a></p> -->
                         </div>
                         <div class="post-image-wrap">
-                            <div class="post-image post-image-1"></div>
+                            <a href="executive.html"><div class="post-image post-image-1"></div></a>
                         </div>
                     </div>
                 </div>
@@ -797,7 +797,7 @@
                             <div class="two spacing"></div>
                         </div>
                         <div class="post-image-wrap">
-                            <div class="post-image post-image-5"></div>
+                            <a href="board.html"><div class="post-image post-image-5"></div></a>
                         </div>
                     </div>
                 </div>
@@ -808,7 +808,7 @@
                             <div class="two spacing"></div>
                         </div>
                         <div class="post-image-wrap">
-                            <div class="post-image post-image-2"></div>
+                            <a href="single.html"></a><div class="post-image post-image-2"></div></a>
                         </div>
                     </div>
                 </div>
@@ -819,7 +819,7 @@
                             <div class="two spacing"></div>
                         </div>
                         <div class="post-image-wrap">
-                            <div class="post-image post-image-4"></div>
+                            <a href="training.html"></a><div class="post-image post-image-4"></div></a>
                         </div>
                     </div>
                 </div>
@@ -829,7 +829,7 @@
                             <h2><a href="research.html">Peergrowth Research Chronicle</a></h2>
                         </div>
                         <div class="post-image-wrap">
-                            <div class="post-image post-image-3"></div>
+                            <a href="research.html"></a><div class="post-image post-image-3"></div></a>
                         </div>
                     </div>
                 </div>
@@ -884,9 +884,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
@@ -1046,9 +1046,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
@@ -1240,9 +1240,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
