--- a/research.html
+++ b/research.html
@@ -43,10 +43,14 @@
             <p>We offer customized solutions to our valuable clients and understand that their needs are unique. We differentiate ourselves by our ability to foresee market conditions and knowing what our client may need to augment business. We do not wait for opportunities to be created. We plan ahead and work closely with our clients to find the perfect fit. Intensive research is our strength and we love what we do. We look for creating benchmarks so that our clients value us as much as we value them.
             </p>
              <p class="action-hint">
-                        <a class="scroll-down" href="index.html"> 
+                        <a class="scroll-down" href="training.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                            Go back home
+                            Previous Service
                         </a>                     
+                    </p>
+                    <p class="action-hint1">
+                        <a class="scroll-down" href="executive.html"> 
+                        Executive Search<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
                     </p>
           </div>
       </div>
@@ -101,9 +105,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
