--- a/training.html
+++ b/training.html
@@ -41,10 +41,14 @@
             <p>We offer our clients bespoke training solutions with an unparalleled focus. We evaluate your training needs to design customized modules. Our process not only involves creation of content and its delivery, but also post-delivery workshops for feedback & candidate assessments.
             </p>
              <p class="action-hint">
-                        <a class="scroll-down" href="index.html"> 
+                        <a class="scroll-down" href="single.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                            Go back home
+                            Previous Service
                         </a>                     
+                    </p>
+                    <p class="action-hint1">
+                        <a class="scroll-down" href="research.html"> 
+                        Peergrowth Research Chronicle<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
                     </p>
           </div>
       </div>
@@ -98,9 +102,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
