--- a/board.html
+++ b/board.html
@@ -42,11 +42,15 @@
               <p>The board plays an essential role in overseeing that the company’s long term goals are on track and that the day to day functions are in accordance with the overall corporate policy. As a trusted partner, we work with leading Multinationals and Family Businesses across the globe to assist them in finding Independent and Non-Independent Directors. Our board search process is rigorous. We consistently track movements across boards through our internal research team and global network to get you the desired candidates. From our pool of qualified and seasoned Directors, you can be assured to find the candidate with the right business acumen and ethos for your board.
             </p>
              <p class="action-hint">
-                        <a class="scroll-down" href="index.html"> 
+                        <a class="scroll-down" href="executive.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                            Go back home
+                            Previous Service
                         </a>                     
                     </p>
+                    <p class="action-hint1">
+                        <a class="scroll-down" href="single.html"> 
+                        Contigent Search<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+                    </p> 
           </div>
       </div>
     </div>
@@ -100,9 +104,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
