--- a/single.html
+++ b/single.html
@@ -47,10 +47,14 @@ We have successfully partnered with corporates to work on roles that were tough,
 As a team, we firmly believe that “Quality is never an accident. It is always the result of intelligent effort.”
             </p>
              <p class="action-hint">
-                        <a class="scroll-down" href="index.html"> 
+                        <a class="scroll-down" href="board.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                            Go back home
+                            Previous Service
                         </a>                     
+                    </p>
+                     <p class="action-hint1">
+                        <a class="scroll-down" href="training.html"> 
+                        Training and Development<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
                     </p>
           </div>
       </div>
@@ -104,9 +108,9 @@ As a team, we firmly believe that “Quality is never an accident. It is always 
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
