--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
            <!-- <div class="two spacing"></div>-->
             <div class="full full-screen">
                 <div class="large-12 columns">
-                    <h2 class="colored-title">Vision</h2>
+                    <h2 class="colored-title">Vision.</h2>
                         <img src="images/vision.jpg" >                  
                     
                     <p class="action-hint">
