Next and previous button name changes

--- a/board.html
+++ b/board.html
@@ -44,7 +44,7 @@
              <p class="action-hint">
                         <a class="scroll-down" href="executive.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                            Previous Service
+                            Executive Search
                         </a>                     
                     </p>
                     <p class="action-hint1">
