--- a/single.html
+++ b/single.html
@@ -49,7 +49,7 @@ As a team, we firmly believe that “Quality is never an accident. It is always 
              <p class="action-hint">
                         <a class="scroll-down" href="board.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                            Previous Service
+                            Board Consulting
                         </a>                     
                     </p>
                      <p class="action-hint1">
