--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
              <p class="action-hint">
                         <a class="scroll-down" href="training.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                            Previous Service
+                         Training and Development
                         </a>                     
                     </p>
                     <p class="action-hint1">
