added join us page

--- a/team2.html
+++ b/team2.html
@@ -63,6 +63,11 @@ Next Member<img src="images/svg/back2.png" style=" height: 30px;"></a>
                         <a href="index.html">How</a>
                         <a href="index.html">Contact</a>
                     </p>
+                    <div class="footer-button">
+                    <p>
+                                <a class="button boxed black footer-button1" target="_blank" href="joinus.html"><i class=" icon-basic-sheet-pen"></i>Join Us</a>
+                    </p>
+                    </div>
                     <div class="three spacing"></div>
                 </div>
                 <div class="large-3 columns">
