--- a/board.html
+++ b/board.html
@@ -69,6 +69,11 @@
                         <a href="index.html">How</a>
                         <a href="index.html">Contact</a>
                     </p>
+                    <div class="footer-button">
+                    <p>
+                                <a class="button boxed black footer-button1" target="_blank" href="joinus.html"><i class=" icon-basic-sheet-pen"></i>Join Us</a>
+                    </p>
+                    </div>
                     <div class="three spacing"></div>
                 </div>
                 <div class="large-3 columns">
