--- a/research.html
+++ b/research.html
@@ -67,11 +67,7 @@
                         <a href="index.html">How</a>
                         <a href="index.html">Contact</a>
                     </p>
-                    <div class="footer-button">
-                    <p>
-                                <a class="button boxed black footer-button1" target="_blank" href="joinus.html"><i class=" icon-basic-sheet-pen"></i>Join Us</a>
-                    </p>
-                    </div>
+                    <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
                     <div class="three spacing"></div>
                 </div>
                 <div class="large-3 columns">
