--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peergrowth</title>
-    <link rel="shortcut iocn" type="image/png" href="image/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.PNG">
     <link rel="stylesheet" href="static/css/foundation.css">
     <link rel="stylesheet" href="static/css/slick.css">
     <link rel="stylesheet" href="static/css/slick-theme.css">
