team member nav chnages

--- a/team1.html
+++ b/team1.html
@@ -47,7 +47,7 @@ He has attended an Advanced Management Course at Judge Business School, Cambridg
 </p>
 <p class="action-hint-team-next">
 <a class="scroll-down" href="team2.html"> 
-Next Member<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+Karun Mehrar<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
