--- a/team2.html
+++ b/team2.html
@@ -40,12 +40,12 @@ His love for networking has helped him grow into a Senior Associate with Peergro
 
 </div>
 <p class="action-hint-team">
-<a class="scroll-down" href="index.html"> 
-<img src="images/svg/back123.png" style=" height: 30px;">Home</a>                       
+<a class="scroll-down" href="team1.html"> 
+<img src="images/svg/back123.png" style=" height: 30px;">Abhishek Singh</a>                       
 </p>
 <p class="action-hint-team-next">
 <a class="scroll-down" href="team3.html"> 
-Next Member<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+Bhavna<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
