--- a/team3.html
+++ b/team3.html
@@ -46,12 +46,12 @@ Bhavna believes in the power of hard work and perseverance. When not working, sh
 
 </div>
 <p class="action-hint-team">
-<a class="scroll-down" href="index.html"> 
-<img src="images/svg/back123.png" style=" height: 30px;">Home</a>                       
+<a class="scroll-down" href="team2.html"> 
+<img src="images/svg/back123.png" style=" height: 30px;">Karun Mehra</a>                       
 </p>
 <p class="action-hint-team-next">
 <a class="scroll-down" href="team4.html"> 
-Next Member<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+Elizabeth<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
