--- a/team4.html
+++ b/team4.html
@@ -49,13 +49,13 @@ family. </p>
 
 </div>
 <p class="action-hint-team">
-<a class="scroll-down" href="index.html"> 
-<img src="images/svg/back123.png" style=" height: 30px;">Home</a>                       
+<a class="scroll-down" href="team3.html"> 
+<img src="images/svg/back123.png" style=" height: 30px;"> Bhavna </a>                       
 </p>
-<p class="action-hint-team-next">
+<!--<p class="action-hint-team-next">
 <a class="scroll-down" href="team4.html"> 
 Next Member<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
-</p>
+</p>-->
 </div>
 
 
