--- a/joinus.html
+++ b/joinus.html
@@ -62,7 +62,7 @@
                                 <input class='required' name='name' placeholder='PHONE NUMBER' type='text'>
                             </div>
                             <div class="large-12 columns">
-                                <textarea class='required' name='message' placeholder='FEW WORS ABOUT YOURSELF'></textarea>
+                                <textarea class='required' name='message' placeholder='FEW WORDS ABOUT YOURSELF'></textarea>
                             <div class="large-2 columns" style="color: white;">
                                 <p>UPLOAD YOUR RESUME</p>
                             </div>    
