--- a/board.html
+++ b/board.html
@@ -50,7 +50,7 @@
                     </p>
                     <p class="action-hint1">
                         <a class="scroll-down" href="single.html"> 
-                        Contigent Search<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+                        Contingent Search<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
                     </p> 
           </div>
       </div>
