--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 </div>
                 </div>
 <div class="full_test">
-<div class="carousel"  data-flickity='{ "autoPlay": true "fade": true, "prevNextButtons": false }'>
+<div class="carousel"  data-flickity='{ "autoPlay": true, "fade": true, "prevNextButtons": false }'>
     <div class="carousel-cell"><!--<br> <h2><a href="#" >A multi billion dollar health care group</a></h2>--><img src="images/svg/folder.png">
                 <p> " Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the business and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vison when recruiting candidates. " <div class="one spacing"></div><span> - Group GM HR, Reputed multi-billion dollar Healthcare Group. </span> </p></div>
     <div class="carousel-cell" ><!--<br><h2><a href="#">A massive family conglomerate</a></h2>--><img src="images/svg/business.png">
