join us page padding change

--- a/joinus.html
+++ b/joinus.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="large-12 columns">
                                 <textarea class='required' name='message' placeholder='FEW WORDS ABOUT YOURSELF'></textarea>
-                            <div class="large-2 columns" style="color: white;">
+                            <div class="large-4 columns" style="color: white; padding: 0px;">
                                 <p>UPLOAD YOUR RESUME</p>
                             </div>    
                                 <input style="color:#fff;" type="file">
