spelling changes and footer changes

--- a/board.html
+++ b/board.html
@@ -68,6 +68,7 @@
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
