--- a/team1.html
+++ b/team1.html
@@ -34,7 +34,7 @@ As a corporate recruiter, Abhishek worked with a market leader for Luxury Real E
 Prior to venturing into Corporate Recruitment, Abhishek worked with a leading Executive search firm in the capacity of a Consultant & Practice Head. With a key focus on Business development & Client servicing, he worked on several CEO/CXO levels searches across industries. He is credited for doing successful placements at Director, Dean, Principal positions with various prestigious institutions across India and abroad. He started his career within Hospitality with Marriott International in Edinburgh, Scotland.
 He has attended an Advanced Management Course at Judge Business School, Cambridge University. He also holds a Post-Graduate Diploma in Business Management from International Management Institute, Belgium and Bachelors in Hospitality and Restaurant management from Oxford Brookes University, Oxford, United Kingdom.</p>
 </div>
-<ul class="socials"> <li><a href="#"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
+<ul class="socials"> <li><a href="https://www.linkedin.com/in/abhishek-y-singh-29026912"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
 <div class="large-6 columns">
 <img src="images/%40stock/team1.png">
@@ -47,7 +47,7 @@ He has attended an Advanced Management Course at Judge Business School, Cambridg
 </p>
 <p class="action-hint-team-next">
 <a class="scroll-down" href="team2.html"> 
-Karun Mehrar<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+Karun Mehra<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
@@ -64,6 +64,7 @@ Karun Mehrar<img src="images/svg/back2.png" style=" height: 30px;"></a>
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
