--- a/team2.html
+++ b/team2.html
@@ -32,7 +32,7 @@
 Karun is an avid basketball player. He represented his school as the Sports Secretary and captained the basketball team as a CBSE Indian National Level player. Apart from Sports, he loves singing & playing the guitar. He has had the honor of performing for Padma Shri Malathi K Holla, India’s International Paralympian, who has won over 300 medals. 
 His love for networking has helped him grow into a Senior Associate with Peergrowth today. </p>
 </div>
-<ul class="socials"> <li><a href="#"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
+<ul class="socials"> <li><a href="https://www.linkedin.com/in/karun-mehra-238907150"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
 <div class="large-6 columns">
 <img src="images/%40stock/team2.png">
@@ -45,7 +45,7 @@ His love for networking has helped him grow into a Senior Associate with Peergro
 </p>
 <p class="action-hint-team-next">
 <a class="scroll-down" href="team3.html"> 
-Bhavna<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+Bhavna Kapoor<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
@@ -62,6 +62,7 @@ Bhavna<img src="images/svg/back2.png" style=" height: 30px;"></a>
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
