--- a/team3.html
+++ b/team3.html
@@ -27,8 +27,8 @@
         <div class="team_page">
             <div class="large-6 columns">
             <div class="team_text">
-    <h2> Bhavna </h2>
-    <p>Bhavna is an enthusiastic recruiter who believes that at the heart of performance and success of any team or organization, lies the quality of its people. In her 17 years of experience, she has worked across India , Singapore and UAE with diverse nationalities and cultures. She has an innate ability to build and nurture relationships which have contributed to her learning & success. Bhavna is an Associate CIPD and a post graduate in Human Resource Management from Xavier’s’ Labour Relations Institute ( XLRI- Jamshedpur) in India.
+    <h2> Bhavna Kapoor</h2>
+    <p>Bhavna is an enthusiastic recruiter who believes that at the heart of performance and success of any team or organization, lies the quality of its people. In her 17 years of experience, she has worked across India , Singapore and UAE with diverse nationalities and cultures. She has an innate ability to build and nurture relationships which have contributed to her learning & success. Bhavna is an Associate CIPD and a post graduate in Human Resource Management from Xavier’s Labour Relations Institute ( XLRI- Jamshedpur) in India.
 
  
 
@@ -36,9 +36,12 @@ She forayed into executive search while working in Singapore and has, since then
 
  
 
-Bhavna believes in the power of hard work and perseverance. When not working, she enjoys reading, playing board games, traveling and honing her culinary skills. </p>
+Bhavna believes in the power of hard work and perseverance. When not working, she enjoys reading, playing board games, travelling and honing her culinary skills. </p>
 </div>
-<ul class="socials"> <li><a href="#"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
+<ul class="socials"> 
+<li><a href="https://www.linkedin.com/in/bhavna-kapoor-b5309334/"><i class='fa fa-3x fa-linkedin'></i></a></li>
+</ul>
+
 </div>
 <div class="large-6 columns">
 <img src="images/%40stock/team3.jfif">
@@ -51,7 +54,7 @@ Bhavna believes in the power of hard work and perseverance. When not working, sh
 </p>
 <p class="action-hint-team-next">
 <a class="scroll-down" href="team4.html"> 
-Elizabeth<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+Elizabeth James<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
@@ -68,6 +71,7 @@ Elizabeth<img src="images/svg/back2.png" style=" height: 30px;"></a>
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
