--- a/team4.html
+++ b/team4.html
@@ -27,7 +27,7 @@
         <div class="team_page">
             <div class="large-6 columns">
             <div class="team_text">
-    <h2>Elizabeth </h2>
+    <h2>Elizabeth James </h2>
     <p>Born in God's own country and raised in Dubai, Elizabeth finished her high school in Dubai and then
 studied English literature in Kerala. But soon she realized the land of opportunities was where she
 wanted to be. Back in Dubai, she completed her master's degree in Human resource and then joined
@@ -41,7 +41,7 @@ Hardworking and optimist in her outlook, Elizabeth enjoys interacting with peopl
 contribution to their recruitment journey. When not at her desk, she enjoys her time with books and
 family. </p>
 </div>
-<ul class="socials"> <li><a href="#"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
+<ul class="socials"> <li><a href="https://www.linkedin.com/in/elizabeth-james-3097a5145/"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
 <div class="large-6 columns">
 <img src="images/%40stock/team4.jpg">
@@ -50,7 +50,7 @@ family. </p>
 </div>
 <p class="action-hint-team">
 <a class="scroll-down" href="team3.html"> 
-<img src="images/svg/back123.png" style=" height: 30px;"> Bhavna </a>                       
+<img src="images/svg/back123.png" style=" height: 30px;"> Bhavna Kapoor </a>                       
 </p>
 <!--<p class="action-hint-team-next">
 <a class="scroll-down" href="team4.html"> 
@@ -71,6 +71,7 @@ Next Member<img src="images/svg/back2.png" style=" height: 30px;"></a>
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
