--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <div class='large-4 columns'>
                             <div class="client">
                                 <img alt="" src="images/svg/whyus3.png" />
-                                <h4>Post<br> Closure<br> Engangement</h4>
+                                <h4>Post<br> Closure<br> Engagement</h4>
                             </div>
                         </div>
                                         
@@ -295,7 +295,7 @@
     <div class="carousel-cell"><!--<br> <h2><a href="#" >A multi billion dollar health care group</a></h2>--><img src="images/svg/folder.png">
                 <p> " Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the business and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vison when recruiting candidates. " <div class="one spacing"></div><span> - Group GM HR, Reputed multi-billion dollar Healthcare Group. </span> </p></div>
     <div class="carousel-cell" ><!--<br><h2><a href="#">A massive family conglomerate</a></h2>--><img src="images/svg/business.png">
-                <p> " I find Abhishek to be very engaging, dependable and high in integrity, he works with a wide network of well-qualified individuals across a range of job disciplines. What I value the most is that he always listens but never afraid to push back when he feels that someone is the right fit for our business. Having a partnership with Abhishek and Peergrowth has significantly improved our time-to-hire on key roles over the past six months. He is very effective at his job and its a pleasure to recommend him as a accomplished professional. " <div class="one spacing"></div><span> - CHRO, Diversified UAE based conglomerate.</span> </p></div>
+                <p> "I find Abhishek to be very engaging, dependable and high in integrity, he works with a wide network of well-qualified individuals across a range of job disciplines. What I value the most is that he always listens but is never afraid to push back when he feels that someone is the right fit for our business. Having a partnership with Abhishek and Peergrowth has significantly improved our time-to-hire on key roles over the past six months. He is very effective at his job and it's a pleasure to recommend him as an accomplished professional." <div class="one spacing"></div><span> - CHRO, Diversified UAE based conglomerate.</span> </p></div>
     <div class="carousel-cell" ><!--<br><h2><a href="#s">A reputed Avation group</a></h2>--><img src="images/svg/plane.png">
                 <p> " Peergrowth has provided us with a tailored recruitment service through comprehensive understanding of our culture and service needs. This personalised approach goes a long way in meeting our needs and successfully identified people for our organisation. " <div class="one spacing"></div><span> - CHRO, Global aviation firm.</span></p></div>
 </div>
@@ -665,6 +665,7 @@
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                      <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>              
@@ -824,6 +825,7 @@
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
@@ -987,6 +989,7 @@
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
@@ -1105,12 +1108,9 @@
                         <div class="contact-details wow slideInUp">
                             <h3 class="colored-title">Follow us</h3>
                             <ul class="socials">
-                                <li><a href="#"><i class='fa fa-twitter'></i></a></li>
-                                <li><a href="#"><i class='fa fa-facebook'></i></a></li>
-                                <li><a href="#"><i class='fa fa-linkedin'></i></a></li>
-                                <li><a href="#"><i class='fa fa-instagram'></i></a></li>
-                                <li><a href="#"><i class='fa fa-dribbble'></i></a></li>
-                                <li><a href="#"><i class='fa fa-youtube'></i></a></li>
+                                <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -1186,6 +1186,7 @@
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
