--- a/joinus.html
+++ b/joinus.html
@@ -90,6 +90,7 @@
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
 
