--- a/single.html
+++ b/single.html
@@ -72,6 +72,7 @@ As a team, we firmly believe that “Quality is never an accident. It is always 
                         <em></em>
                         <a href="index.html" >What</a>
                         <a href="index.html">How</a>
+                        <a href="index.html">Who</a>
                         <a href="index.html">Contact</a>
                     </p>
                     <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>
