--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         }
         .hidden{
             display: none;
+            visibility: hidden;
         }
 
 
@@ -108,7 +109,7 @@
             <div class="full full-screen">
                 <div class="large-12 columns">
                     <h2 class="colored-title">
-                        Our story.</h2>
+                        Our story</h2>
                     <p class="big-text">
                         Our purpose is to engage with leading organizations and support their human capital needs. We understand the challenges that our clients face while filling a vacancy and our candidates who seem unsure about the next best opportunity. We exist to humanize the entire process and transform it into a long standing relationship.
                     </p>
@@ -126,7 +127,7 @@
            <!-- <div class="two spacing"></div>-->
             <div class="full full-screen">
                 <div class="large-12 columns">
-                    <h2 class="colored-title">Vision.</h2>
+                    <h2 class="colored-title">Vision</h2>
                         <img src="images/vision.jpg" >                  
                     
                     <p class="action-hint">
@@ -140,7 +141,7 @@
 
             <div class="full full-screen">
                 <div class="large-12 columns">
-                    <h2 class="colored-title">Why work with us.</h2>
+                    <h2 class="colored-title">Why work with us</h2>
                     <div class="full-screen1">
                     <div class="clients">
                         <div class='large-4   columns'>
@@ -190,7 +191,7 @@
             </div>
             <div class="full">
                 <div class="large-12 columns" >
-                    <h2 class="colored-title">What we do.</h2>
+                    <h2 class="colored-title">What we do</h2>
                 </div>
                 <div class="large-12 columns">
                     <p class="big-text">Peergrowth offers customized, integrated, high-quality, research-based executive search and leadership consulting services. We successfully access international markets to match your executive and management needs with the ideal candidates. </p>
@@ -255,7 +256,7 @@
 <div class="three spacing"></div>
             <div id="team" class="full no-bottom">
                 <div class="large-12 columns">
-                    <h2 class="colored-title">Meet the team.</h2>
+                    <h2 class="colored-title">Meet the team</h2>
                 </div>
             </div>
             <div class="members">
