--- a/team2.html
+++ b/team2.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="static/css/linea-arrows-styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,400,400i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
 
   <body class="single">
@@ -32,7 +33,7 @@
 Karun is an avid basketball player. He represented his school as the Sports Secretary and captained the basketball team as a CBSE Indian National Level player. Apart from Sports, he loves singing & playing the guitar. He has had the honor of performing for Padma Shri Malathi K Holla, India’s International Paralympian, who has won over 300 medals. 
 His love for networking has helped him grow into a Senior Associate with Peergrowth today. </p>
 </div>
-<ul class="socials"> <li><a href="https://www.linkedin.com/in/karun-mehra-238907150"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
+<ul class="socials"> <li><a href="https://www.linkedin.com/in/karun-mehra-238907150" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
 <div class="large-6 columns">
 <img src="images/%40stock/team2.png">
