--- a/team3.html
+++ b/team3.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="static/css/linea-arrows-styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,400,400i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
 
   <body class="single">
@@ -39,7 +40,7 @@ She forayed into executive search while working in Singapore and has, since then
 Bhavna believes in the power of hard work and perseverance. When not working, she enjoys reading, playing board games, travelling and honing her culinary skills. </p>
 </div>
 <ul class="socials"> 
-<li><a href="https://www.linkedin.com/in/bhavna-kapoor-b5309334/"><i class='fa fa-3x fa-linkedin'></i></a></li>
+<li><a href="https://www.linkedin.com/in/bhavna-kapoor-b5309334/" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li>
 </ul>
 
 </div>
