--- a/team4.html
+++ b/team4.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="static/css/linea-arrows-styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,400,400i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
 
   <body class="single">
@@ -41,7 +42,7 @@ Hardworking and optimist in her outlook, Elizabeth enjoys interacting with peopl
 contribution to their recruitment journey. When not at her desk, she enjoys her time with books and
 family. </p>
 </div>
-<ul class="socials"> <li><a href="https://www.linkedin.com/in/elizabeth-james-3097a5145/"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
+<ul class="socials"> <li><a href="https://www.linkedin.com/in/elizabeth-james-3097a5145/" target="_blank"><i class='fa fa-3x fa-linkedin'></i></a></li></ul>
 </div>
 <div class="large-6 columns">
 <img src="images/%40stock/team4.jpg">
