opens links in new tab

--- a/board.html
+++ b/board.html
@@ -110,7 +110,7 @@
                         <ul class="socials_footer">
                                         <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
                                         <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
-                                        <li><a href="https://www.linkedin.com/company/peergrowth/"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/peergrowth/" target="_blank"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
