social media links open in a dofferent tab

--- a/single.html
+++ b/single.html
@@ -112,8 +112,8 @@ As a team, we firmly believe that “Quality is never an accident. It is always 
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="https://www.instagram.com/peergrowth/"><i class='fa fa-instagram fa-2x leg'></i></a></li>
-                                        <li><a href="https://www.facebook.com/PeergrowthHQ/"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="https://www.instagram.com/peergrowth/" target="_blank"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="https://www.facebook.com/PeergrowthHQ/" target="_blank"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
                                         <li><a href="https://www.linkedin.com/company/peergrowth/" target="_blank"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
